--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "pop-backbone/php-hooks",
     "description": "A fork of PHP-Hooks, adapted to PoP - A fork of the WordPress filters hook system rolled in to a class to be ported into any PHP-based system",
-    "keywords": ["hooks", "actions", "filters"],
+    "keywords": ["PHP", "hooks", "actions", "filters"],
     "homepage": "https://github.com/PoPBackbone/php-hooks",
     "type": "library",
     "license": "GPL-2.0-or-later",
@@ -16,5 +16,13 @@
         "psr-4": {
             "PoPBackbone\\PHPHooks\\": "src"
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.9-dev"
+        }
+    },
+    "config": {
+        "sort-packages": true
     }
 }
